Fix bug that caused cursor to jump forward when deleting first paragraph

--- a/app/assets/stylesheets/api/articles.scss
+++ b/app/assets/stylesheets/api/articles.scss
@@ -12,7 +12,7 @@ p.chunk {
   font-size: 22px;
   font-family: "freight-text-pro";
   line-height: 1.58;
-  margin-bottom: 30px;
+  padding-bottom: 30px;
   color: #383838;
 }
 
@@ -67,7 +67,7 @@ p.article_publish_date {
   font-family: 'europa';
   position: absolute;
   float: left;
-  left: 15px;
+  left: 40px;
   color: rgba(0,0,0,.10);
   font-size: 18px;
 }
